@@ -332,6 +332,14 @@ Version 1.8.0
 Version 1.6.17
 *******************************************************************************
 
+2012-03-26 Yoichi NAKAYAMA <yoichi.nakayama(at)gmail.com>
+
+	SF Bug Tracker id 3510693 - build fail with --disable-device
+
+	Use INCLUDE_DEVICE_APIS instead of UPNP_HAVE_DEVICE as in other sources.
+	Don't use soap_device_callback if INCLUDE_DEVICE_APIS is not set,
+	otherwise link error occur on Windows.
+
 2012-03-26 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
 
 	SF Bug Tracker id 3511149 - --disable-ssdp has no effect
